[gd_scene load_steps=2 format=3 uid="uid://dk2p23b6cvj8e"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_kkkl3"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_kkkl3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthBar" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnergyBar" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
